[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Fishing.gd" type="Script" id=1]
[ext_resource path="res://Assets/Pow.png" type="Texture2D" id=2]
[ext_resource path="res://Assets/Pow.ogg" type="AudioStream" id=3]

[node name="Fishing" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
pivot_offset = Vector2( 0, 0 )
clip_contents = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="StrikeProgress" type="ProgressBar" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 449.0
offset_top = 189.0
offset_right = 617.0
offset_bottom = 255.0
pivot_offset = Vector2( 0, 0 )
clip_contents = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
percent_visible = true

[node name="ReactionTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="Pow" type="Sprite2D" parent="." index="2"]

visible = false
position = Vector2( 543, 222.739 )
scale = Vector2( 0.397647, 0.397647 )
texture = ExtResource( 2 )

[node name="PowSfx" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"


